<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:ems="10"
        android:id="@+id/kitap"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/book_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:ems="10"
        android:id="@+id/yazar"
        android:hint="@string/author_name"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/kitap"
        android:layout_alignLeft="@+id/kitap"
        android:layout_alignStart="@+id/kitap" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="3dp"
        android:id="@+id/sayfa"
        android:layout_below="@+id/yazar"
        android:layout_alignLeft="@+id/yazar"
        android:layout_alignStart="@+id/yazar"
        android:hint="@string/page" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:text="@string/book_shelf"
        android:id="@+id/text_raf"
        android:layout_below="@+id/sayfa"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerraf"
        android:contextClickable="false"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/text_raf"
        android:layout_alignLeft="@+id/sayfa"
        android:layout_alignStart="@+id/sayfa"
        android:layout_alignRight="@+id/sayfa"
        android:layout_alignEnd="@+id/sayfa" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textCapSentences"
        android:ems="10"
        android:id="@+id/not"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/text_notlar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/book_notes"
        android:singleLine="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:text="@string/book_note"
        android:id="@+id/text_notlar"
        android:layout_below="@+id/read"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/read"
        android:layout_marginTop="5dp"
        android:text="@string/read_checkbox"
        android:layout_below="@+id/spinnerraf"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_book"
        android:textAllCaps="false"
        android:textSize="17dp"
        android:textColor="@color/colorPrimaryGreen"
        android:id="@+id/ekle"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>